--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Planets of the Universe</title>
-  </head>
-  <body>
-    <h1>Planets of the Universe</h1>
-    <h3>Hello World!</h3>
-  </body>
-</html>
+---
+layout: default
+---
+
+<h1>Planets of the Universe</h1>
+<h3>Hello World!</h3>
