--- a/index.html
+++ b/index.html
@@ -3,4 +3,15 @@ layout: default
 ---
 
 <h1>Planets of the Universe</h1>
-<h3>Hello World!</h3>
+<p>A planet is an astronomical object orbiting a star or stellar remnant that is massive enough to be rounded by its own gravity, is not massive enough to cause thermonuclear fusion, and has cleared its neighbouring region of planetesimals.</p>
+
+<h2>Recently Discovered Planets</h2>
+
+<ul>
+  {% for news in site.categories.recently-discovered limit:2 %}
+    <li>
+      <a href="">{{news.title}}</a>
+      <p>{{news.meta}}</p>
+    </li>
+  {% endfor %}
+</ul>
